style.css
:root{
    --primaryColor:#f2726a; 
    --textColor: white;
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 100%;
}
ul{
    list-style-type: none;
}
.fa {
    font-family: 'FontAwesome'! Important; 
}

/*
reset css
*/

body{
    display: flex;
    justify-content: center;
    height: 100vh;
    background-image: linear-gradient(45deg, #00853e, #50c878);
    align-items: center;
}
.card{
    width: 300px;
    height: 400px;
    background-color: #242628;
    border-radius: 15px;
    text-align: center;
    text-transform:capitalize;
    color: var(--textColor);
    overflow: hidden;
}
img{
    width:120px;
    height:120px;
    margin-top: 20px;
    border: 2px solid var(--primaryColor);
    object-fit: cover;
    object-position:top;
    border-radius: 50%;
    transition: 0.4s;
}
img:hover{
    object-position:unset;
    border: unset;
    border-radius:unset;
    margin-top:unset;
    width: 100%;
    height: 100%; 
}
h2{
    font-weight: 600;
    font-size: 24px;
    line-height: 24px;
    margin: 20px auto 10px;
}
p{
    color: var(--primaryColor);
    font-size: 16px;
    font-weight: 600;
}
ul{
    display: flex;
    justify-content:space-around;
}
li{
    margin: 20px auto;
    font-size: 21px;
    font-weight: 600;
}
li>a{
    color: white;
}
li>span{   
    visibility: hidden;
}
button{
    border: 2px solid var(--primaryColor);
    background-color: transparent;
    color: white;
    border-radius: 5px;
    padding: 10px 20px;
}
button:hover{
    background-color:var(--primaryColor);
}
@media only screen and (min-width: 360px){
    .footer>*:not(.copy) {
        display: none;
    }
    .copy{
        text-align: center;
    }
}
.footer {
    padding: 0;
    position: fixed;
    bottom: 50px;
    left: 50px;
    right: 50px;
    width: auto;
    height: 1px;
    z-index: 99;
    display: block;
}
.footer .soc-box {
    position: absolute;
    right: 0;
    bottom: 0;
    float: right;
    width: 24px;
}
.follow-label {
    padding-right: 75px;
    position: absolute;
    bottom: 100%;
    right: 0;
    color: var(--textColor);
    font-size: 14px;
    line-height: 24px;
    height: 24px;
    white-space: nowrap;
    transform-origin: 100% 0;
    text-align: right;
    transform: rotate(90deg);
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
}
.copy a{
    all: unset;
    cursor: pointer;
    color: var(--textColor);
}
.follow-label:after {
    content: '';
    position: absolute;
    top: 50%;
    right: 0;
    width: 50px;
    height: 1px;
    background: rgba(0,0,0,.1);
}
.clear {
    clear: both;
}
.footer .soc a {
    display: block;
    margin-bottom: 20px;
    text-align: center;
    color: var(--textColor);
}

